--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col">
                     <p class="top-description p-5 mb-5 c-s-1">
-                        Applicible projects include performing large scale
+                        Applicable projects include performing large scale
                         data-mining, data pre-processing, optical character
                         recognition, and developing classification solutions.
                         <!-- <br> -->
