--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         data-mining, data pre-processing, optical character
                         recognition, and developing classification solutions.
                         <!-- <br> -->
-                        Excells at making machine learning connected web
+                        Excels at making machine learning connected web
                         applications, creating distributed training solutions,
                         and modeling.
                         <!-- <br> -->
