--- a/index.html
+++ b/index.html
@@ -1,56 +1,190 @@
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Lewis Brown - ML Resume</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <div class="container-fluid mb-5">
-            <div class="top-title row py-5">
-                <h1 class="display-1 py-5">Lewis Brown</h1>
-                <h5 class="display-6 py-5">Machine Learning Engineer</h5>
+            <div id="introduction" class="row py-5">
+                <h1 class="display-1 m-0 py-5">
+                    <span id="introduction-name" class="badge rounded-0">Lewis Brown</span>
+                </h1>
+                <h5 class="display-6 m-0">Software Engineer</h5>
+                <h5 class="display-6 m-0">Full-Stack Web Developer</h5>
+                <h5 class="display-6 m-0 pb-5">Machine Learning Engineer</h5>
             </div>
         </div>
-        <div class="container">
+        <div class="container mb-5">
             <div class="row">
-                <div class="col">
-                    <p class="display-6 p-5 mb-5 c-s-0">
-                        Innovative machine learning engineer with 3+ years
-                        experience working in acacdemic, research, and commerical
-                        projects.
+                <div id="opening-statement" class="lead p-5">
+                    <p class="m-0 mb-5 ti-3">
+                        Versatile and results-driven engineer with a passion for developing
+                        innovative software solutions. With a background in machine learning
+                        engineering, full-stack web development, and software engineering,
+                        my horizontal development experience brings a unique blend of
+                        technical and project management skills to the table.
+                    </p>
+                    <p class="m-0 ti-3">
+                        Whether building complex systems from scratch or optimizing existing
+                        infrastructure, I am dedicated to delivering efficient,
+                        scalable solutions that exceed expectations. With a proven
+                        track record of success across multiple domains, I am eager
+                        to apply my problem-solving ability and drive to your organization.
                     </p>
                 </div>
             </div>
+        </div>
+        <div class="container-fluid mb-5">
             <div class="row">
-                <div class="col">
-                    <p class="top-description p-5 mb-5 c-s-1">
-                        Applicable projects include performing large scale
-                        data-mining, data pre-processing, optical character
-                        recognition, and developing classification solutions.
-                        <!-- <br> -->
-                        Excels at making machine learning connected web
-                        applications, creating distributed training solutions,
-                        and modeling.
-                        <!-- <br> -->
-                        Previous experiences performing full-stack web
-                        development, creating computer vision object detection and
-                        recognition, robot localization and navigation, edge device
-                        and IoT computation.
+                <div id="toc" class="display-1 p-5 text-center">
+                    Table of Contents
+                </div>
+            </div>
+        </div>
+        <div class="container mb-5">
+            <div class="row">
+                <ul id="toc" class="list-group list-group-flush lead p-0">
+                    <li class="list-group-item p-5">About Me</li>
+                    <li class="list-group-item p-5">Work Experience</li>
+                    <li class="list-group-item p-5">Projects</li>
+                    <li class="list-group-item p-5">Skills</li>
+                    <li class="list-group-item p-5">Education</li>
+                    <li class="list-group-item p-5">Courses and Certifications</li>
+                    <li class="list-group-item p-5">Publications</li>
+                    <li class="list-group-item p-5">Testimonials</li>
+                    <li class="list-group-item p-5">Contact Information</li>
+                </ul>
+            </div>
+        </div>
+        <div class="container-fluid mb-5">
+            <div class="row">
+                <div id="about-me" class="display-1 p-5 text-center">
+                    About Me
+                </div>
+            </div>
+        </div>
+        <div class="container mb-5">
+            <div class="row">
+                <div id="about-me-prompt" class="lead p-5">
+                    <p class="m-0 mb-5 ti-3">
+                        Hello! I'm Lewis Brown, a machine learning engineer with a passion for building innovative solutions using cutting-edge technologies. With 3+ years of commercial and academic experience in the field, I have a strong background in designing, developing, and deploying machine learning models for a range of applications.
                     </p>
-                    <h1 class="display-3 pb-5">
-                        Project
-                    </h1>
-                    <p class="top-showcase">
-                        <img class="img-fluid mx-auto d-block" src="images/social-media-discover-page-concept.jpeg">
+                    <p class="m-0 mb-5 ti-3">
+                        Throughout my career in software, I've worked on a variety of projects that involved developing models for image recognition, object detection and localization, and limited computation, edge device environments. I'm skilled in a range of programming languages, including Python, C++, and Java, and have experience working with a variety of frameworks such as TensorFlow, PyTorch, scikit-learn, and Keras.
+                    </p>
+                    <p class="m-0 mb-5 ti-3">
+                        With my academic research background, I'm passionate about staying up-to-date with the latest developments in the field and have a keen interest in exploring new research and techniques. One of my most exciting projects to date was applying my thesis work to an edge computing evironment without the use of a ML library, which required a high degree of persistence, investigation, and creativity to execute.
+                    </p>
+                    <p class="m-0 ti-3">
+                        If you're looking for a talented and driven machine learning engineer to help take your projects to the next level, I'd love to hear from you. Please feel free to get in touch to learn more about my experience and skills.
                     </p>
                 </div>
             </div>
+        </div>
+        <div class="container-fluid mb-5">
             <div class="row">
-                <div class="col">
+                <div id="work-experience" class="display-1 p-5 text-center">
+                    Work Experience
+                </div>
+            </div>
+        </div>
+        <div class="container mb-5">
+<div class="card mb-5">
+  <div class="card-header">
+    Jun 2022 - Present (9 months)
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Full-Stack Web Developer @ Freelance</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+  </div>
+  <div class="card-footer text-muted">
+     Python, Docker, Django, Stripe
+  </div>
+</div>
 
-                </div>
-            </div>
+<div class="card mb-5">
+  <div class="card-header">
+    Aug 2022 - Dec 2022 (5 months)
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Graduate Teaching Assistant @ University of Arkansas</h5>
+    <p class="card-text">Performed teaching assistant duties for Programming Foundations I & II. I guided lab sessions and provided grading support for labs and assignments for three lab sections composed of approximately a hundred undergraduate students while providing office hours for both courses. I commonly answered questions regarding assignments and lecture, assisted students with debugging logical and compilation errors, and explained programming concepts discussed in lecture.</p>
+  </div>
+  <div class="card-footer text-muted">
+     Data Visualization, LaTeX, Lecturing, Debugging Code, C++
+  </div>
+</div>
+
+<div class="card mb-5">
+  <div class="card-header">
+    Feb 2020 - Aug 2022 (2 years 7 months)
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Graduate Research Assistant @ University of Arkansas</h5>
+    <p class="card-text">Contributed to a ML enhanced CVE patch recommendation and remediation application for the management and auditing of devices in system critical electrical infrastructure.</p>
+  </div>
+  <div class="card-footer text-muted">
+     Python, AngularIO, Docker, Django, Machine Learning
+  </div>
+</div>
+
+<div class="card mb-5">
+  <div class="card-header">
+    Jun 2022 - Present (9 months)
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Full-Stack Web Developer, Freelance</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+  </div>
+  <div class="card-footer text-muted">
+     Python, Docker, Django
+  </div>
+</div>
+
+<div class="card mb-5">
+  <div class="card-header">
+    Jun 2022 - Present (9 months)
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Full-Stack Web Developer, Freelance</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+  </div>
+  <div class="card-footer text-muted">
+     Python, Docker, Django
+  </div>
+</div>
+
+<div class="card mb-5">
+  <div class="card-header">
+    Jun 2022 - Present (9 months)
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Full-Stack Web Developer, Freelance</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+  </div>
+  <div class="card-footer text-muted">
+     Python, Docker, Django
+  </div>
+</div>
+
+<div class="card mb-5">
+  <div class="card-header">
+    Jun 2022 - Present (9 months)
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Full-Stack Web Developer, Freelance</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+  </div>
+  <div class="card-footer text-muted">
+     Python, Docker, Django
+  </div>
+</div>
+
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
 </html>
