updated intro titles to 2

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <h1 class="display-1 m-0 py-5">
           <span id="introduction-name" class="badge rounded-0">Lewis Brown</span>
         </h1>
-        <h5 class="display-6 m-0">Software Engineer</h5>
-        <h5 class="display-6 m-0">Full-Stack Engineer</h5>
+        <h5 class="display-6 m-0">Full-Stack Software Engineer</h5>
         <h5 class="display-6 m-0 pb-5">Machine Learning Engineer</h5>
       </div>
     </div>
