fixed a comma/grammar mistake

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 service.
 
                 My responsibilities have included completing numerous work
-                board tasks, such as developing new features, fixing bugs,
+                board tasks, such as developing new features and fixing bugs,
                 and working closely with the project owner, who is also a
                 pilot, to ensure that investor expectations and needs are met.
               </p>
