added skills to freelance position

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               </p>
             </div>
             <div class="card-footer text-muted">
-              Python, Docker, Django, Stripe
+              Python, Docker, Django, React, Redux, Stripe
             </div>
           </div>
           <div id="work-experience-1" class="card mb-5 auto-fade">
