reworded freelance position description

--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
 
                 Through this collaboration, we have facilitated and expedited
                 the development of a platform that streamlines the process of
-                booking charter flights and facilitates communication between
-                clients and pilots.
+                booking charter flights and matching of clients and pilots.
               </p>
             </div>
             <div class="card-footer text-muted">
