normalized computer .jpg extensions

--- a/index.html
+++ b/index.html
@@ -861,28 +861,28 @@
               <img src="resources/computers/8.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="resources/computers/7.JPG" class="d-block w-100">
+              <img src="resources/computers/7.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="resources/computers/6.JPG" class="d-block w-100">
+              <img src="resources/computers/6.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="resources/computers/5.JPG" class="d-block w-100">
+              <img src="resources/computers/5.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
               <img src="resources/computers/4.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="resources/computers/3.JPG" class="d-block w-100">
+              <img src="resources/computers/3.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="resources/computers/2.JPG" class="d-block w-100">
+              <img src="resources/computers/2.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
               <img src="resources/computers/1.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="resources/computers/0.JPG" class="d-block w-100">
+              <img src="resources/computers/0.jpg" class="d-block w-100">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#computers" data-bs-slide="prev">
