added contact information

--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,24 @@
       </div>
     </div>
     <div class="container">
-    
+      <div id="contact-container" class="row auto-fade p-5 mb-5">
+        <p class="m-0 p-0">
+          <span class="badge bg-secondary">Email</span>
+          yrjvfpyoebja@tznvy.pbz (rot13)
+          <br>
+          <br>
+          <span class="badge bg-secondary">LinkedIn</span>
+          <a href="https://www.linkedin.com/in/ramity/">
+            linkedin.com/in/ramity
+          </a>
+          <br>
+          <br>
+          <span class="badge bg-secondary">Github</span>
+          <a href="https://github.com/ramity">
+            github.com/ramity
+          </a>
+        </p>
+      </div>
     </div>
 
     <a class="text-decoration-none" href="#toc">
