updated skills section into more subsections

--- a/index.html
+++ b/index.html
@@ -910,29 +910,30 @@
       </div>
     </div>
     <div class="container mb-5">
-      <div id="skills-container" class="row auto-fade">
+      <div id="skills-container" class="row auto-fade lead">
         <h1 class="h1">
-          Programming and templating languages:
+          Programming, scripting, and templating languages:
         </h1>
         <p>
-          Python,
-          C++,
-          Java,
-          PHP,
-          HTML4&5,
-          Javascript,
-          WebAssembly,
-          MIPS32,
-          CSS2&3,
-          SQL,
-          Lua,
-          .NET,
-          Objective-C,
-          C#,
-          MATLAB,
-          Erlang,
-          Wolfram,
-          Arduino
+          Python(10),
+          C++(10),
+          Java(8),
+          PHP(10),
+          HTML4&5(10),
+          Javascript(9),
+          TypeScript(7),
+          WebAssembly(7),
+          MIPS32(6),
+          CSS2&3(8),
+          SQL(8),
+          Lua(6),
+          .NET(5),
+          Objective-C(5),
+          C#(6),
+          MATLAB(6),
+          Erlang(5),
+          Wolfram(6),
+          Arduino(4)
         </p>
         <h1 class="h1">
           Machine learning frameworks:
@@ -952,32 +953,127 @@
           Extreme programming
         </p>
         <h1 class="h1">
-          Tools and technologies:
+          Frontend frameworks:
+        </h1>
+        <p>
+          AngularJS,
+          AngularIO,
+          React,
+          NativeScript,
+          Bootstrap,
+          Vue.js,
+          Meteor.js
+        </p>
+        <h1 class="h1">
+          Frontend libraries:
+        </h1>
+        <p>
+          jQuery,
+          DataTables,
+          Three.js,
+          D3.js
+        </p>
+        <h1 class="h1">
+          Backend frameworks:
+        </h1>
+        <p>
+          Django,
+          Symfony,
+          FastAPI,
+          Selenium,
+          Flask,
+          PHPUnit,
+          Laravel,
+          Electron
+        </p>
+        <h1 class="h1">
+          Backend servers:
+        </h1>
+        <p>
+          Uvicorn,
+          Node.js
+          Apache,
+          Nginx
+        </p>
+        <h1 class="h1">
+          Engines:
+        </h1>
+        <p>
+          OSRM,
+          Twig,
+          Tesseract-OCR,
+          RabbitMQ(broker)
+        </p>
+        <h1 class="h1">
+          Backend libraries:
+        </h1>
+        <p>
+          DoctrineORM,
+          AsyncIO,
+          WKHTMLtoPDF,
+          OpenCV,
+          OpenGL,
+          NumPy,
+          Matplotlib,
+          SciPy,
+          Requests,
+          Pandas,
+          PHPdotenv,
+          StripeAPI,
+          Assetic,
+          Goutte,
+          Typer,
+          Discord.py,
+          Babel(transpiler),
+          Jupyter Notebook/Lab,
+          CUDA,
+          Celery
+        </p>
+        <h1 class="h1">
+          Package managers:
+        </h1>
+        <p>
+          Composer,
+          Pip,
+          Chocolate
+        </p>
+        <h1 class="h1">
+          Protocols:
+        </h1>
+        <p>
+          OAuth,
+          REST,
+          CRUD,
+          MQTT,
+          SSH,
+          OpenStreetMaps
+        </p>
+        <h1 class="h1">
+          Database/value store:
+        </h1>
+        <p>
+          Redis,
+          Memcached,
+          MySQL,
+          MariaDB,
+          phpMyAdmin,
+          CouchDB,
+          MongoDB
+        </p>
+        <h1 class="h1">
+          Version control:
         </h1>
         <p>
           Git,
           Phabricator,
-          GitLab,
-          Docker,
-          SSH,
-          Jupyter Notebook/Lab,
-          Apache,
-          Nginx,
-          Open Street Maps,
-          MySQL,
-          MariaDB
+          GitLab
         </p>
         <h1 class="h1">
-          Various libraries I've used:
+          Containerization:
         </h1>
         <p>
-          AngularJS, AngularIO, React, NativeScript, Django, Symfony, Jquery,
-          DoctrineORM, phpMyAdmin, Bootstrap, OSRM,
-          CUDA, Three.js, OpenGL, NumPy, Matplotlib, SciPy, Uvicorn, AsyncIO, FastAPI, Flask, Requests,
-          WKHTMLtoPDF, OpenCV, Selenium, Pandas, Composer, ,
-          DataTables, PHPUnit, Twig, PHPdotenv, Laravel, StripeAPI, OAuth, Assetic, Goutte, Typer,
-          Node.js, Electron, D3.js, Vue.js, Meteor.js, Babel, Webpack, Redis, Memcached, Celery,
-          Discord.py, Tesseract-OCR
+          Docker,
+          kubernetes
         </p>
       </div>
     </div>
