updated skills>protocols to protocols/standards

--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,7 @@
           Chocolate
         </p>
         <h1 class="h1">
-          Protocols:
+          Protocols/standards:
         </h1>
         <p>
           OAuth,
