Updated opening tagline from feedback

--- a/index.html
+++ b/index.html
@@ -21,15 +21,22 @@
       <div class="row">
         <div id="opening-statement" class="lead p-5 auto-fade">
           <p class="m-0 ti-3">
-            Howdy! I'm Lewis Brown, a software engineer with a passion for
-            building innovative solutions using cutting-edge technologies. I have 7+
-            years of experience in software, and I have a strong background in designing,
-            developing, and deploying software solutions for a wide range of applications.
-            Whether building complex systems from scratch or optimizing existing
-            infrastructure, I am dedicated to delivering efficient,
-            scalable solutions that exceed expectations. With a proven
-            track record of success across multiple domains, I am eager
-            to apply my problem-solving ability and drive to your organization.
+            Hi, I'm Lewis Brown, a software engineer with a passion for building
+            innovative solutions that solve real-world problems. With over
+            7 years of professional experience, 4 years of successful freelance work,
+            and 5 years of academic research, I bring a wealth of expertise to every
+            project I undertake.
+
+            I specialize in designing and developing scalable software solutions for a
+            variety of applications, from e-commerce platforms to machine learning
+            enhanced tools. Whether working independently or as part of a team, I am
+            committed to delivering results that exceed expectations.
+
+            My unique value proposition lies in my ability to quickly translate
+            complex requirements, identify scope and potential challenges, and implement
+            solutions that are both efficient and effective. With a proven track record of success
+            across multiple domains, I am excited to bring my problem-solving skills
+            and drive to your organization.
           </p>
         </div>
       </div>
