added CV experiment to portfolio

--- a/index.html
+++ b/index.html
@@ -531,6 +531,18 @@
           </a>
         </div>
 
+        <h2 class="display-6">Plate tracking experiments</h2>
+        <video class="embed-responsive-item mb-0 p-0" controls loop>
+          <source src="resources/video/unique_corner_snatch.mp4" type="video/mp4">
+        </video>
+        <div class="description">
+          <p>
+            A classical CV motion tracking solution I created. This approach uses the
+            harris corner detector and a combination of local and global frame
+            calculations to detect movement in a scene.
+          </p>
+        </div>
+
         <h2 class="display-6">CTTP Calibration Application</h2>
         <div id="cttp-calibration" class="carousel carousel-dark slide">
           <div class="carousel-indicators mb-0">
