generalized header from plate tracking to motion tracking

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
           </a>
         </div>
 
-        <h2 class="display-6">Plate tracking experiments</h2>
+        <h2 class="display-6">Motion tracking experiments</h2>
         <video class="embed-responsive-item mb-0 p-0" controls loop>
           <source src="resources/video/unique_corner_snatch.mp4" type="video/mp4">
         </video>
