--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
         </div>
 
         <h2 class="display-6">Motion tracking experiments</h2>
-        <video class="embed-responsive-item mb-0 p-0" controls loop>
+        <video class="embed-responsive-item mb-0 p-0" controls autoplay loop>
           <source src="resources/video/unique_corner_snatch.mp4" type="video/mp4">
         </video>
         <div class="description">
