removed hyphens from position titles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="display-1 m-0 py-5">
           <span id="introduction-name" class="badge rounded-0">Lewis Brown</span>
         </h1>
-        <h5 class="display-6 m-0">Full-Stack Software Engineer</h5>
+        <h5 class="display-6 m-0">Full Stack Software Engineer</h5>
         <h5 class="display-6 m-0 pb-5">Machine Learning Engineer</h5>
       </div>
     </div>
@@ -97,7 +97,7 @@
           <p class="m-0 mb-3 ti-3">
             Versatile and results-driven engineer with a passion for developing
             innovative software solutions. With a background in machine learning
-            engineering, full-stack web development, and software engineering,
+            engineering, full stack web development, and software engineering,
             my horizontal development experience brings a unique blend of
             technical and project management skills to the table.
             I'm skilled in a wide range of programming languages and have experience
@@ -153,9 +153,9 @@
               Jun 2022 - Present (9 months)
             </div>
             <div class="card-body">
-              <h3 class="card-title">Full-Stack Engineer @ Freelance</h3>
+              <h3 class="card-title">Full Stack Engineer @ Freelance</h3>
               <p class="card-text ti-3">
-                As a freelance full-stack software engineer, I have made
+                As a freelance full stack software engineer, I have made
                 significant contributions to a project for a pilot charter
                 service.
 
@@ -173,7 +173,7 @@
                 requests to ensure that the code meets quality standards.
               </p>
               <p class="card-text ti-3">
-                My contributions as a full-stack software engineer have been
+                My contributions as a full stack software engineer have been
                 critical to the success of the project.
 
                 Most distinctly, my inclusion of Docker into our software
@@ -295,7 +295,7 @@
             </div>
             <div class="card-body">
               <h3 class="card-title">
-                Full-Stack Engineer @ CTTP - University of Arkansas Research Center
+                Full Stack Engineer @ CTTP - University of Arkansas Research Center
               </h3>
               <p class="card-text ti-3">
                 Collaborated with a tight-knit team of developers to optimize,
@@ -390,7 +390,7 @@
             </div>
             <div class="card-body">
               <h3 class="card-title">
-                Full-Stack Developer @ Thrive GmbH
+                Full Stack Developer @ Thrive GmbH
               </h3>
               <p class="card-text ti-3">
                 As a software developer for a company based in Bietigheim-Bissingen,
@@ -454,7 +454,7 @@
             </div>
             <div class="card-body">
               <h3 class="card-title">
-                Full-Stack Developer @ CTTP - University of Arkansas Research Center
+                Full Stack Developer @ CTTP - University of Arkansas Research Center
               </h3>
               <p class="card-text ti-3">
                 Collaborated with a small team of developers to optimize, refactor,
