added missing graduate word

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="card-body">
               <h3 class="card-title">Graduate Teaching Assistant @ University of Arkansas</h3>
               <p class="card-text ti-3">
-                As a teaching assistant for Programming Foundations I & II, I
+                As a graduate teaching assistant for Programming Foundations I & II, I
                 played a critical role in facilitating student learning and success.
 
                 I guided three lab sessions, assisted in the creation of homework
