Updated graduate assistant position description to match linkedin

--- a/index.html
+++ b/index.html
@@ -246,27 +246,24 @@
                 Graduate Research Assistant @ University of Arkansas
               </h3>
               <p class="card-text ti-3">
-                As a software engineer working as a student researcher, I made a
-                notable contribution to the development of a machine learning (ML)
-                enhanced application that scraped and provided recommendations for
-                Common Vulnerabilities and Exposures (CVE) patches and remediation
-                for the management and the auditing of devices in system critical
-                electrical infrastructure.
+                Through this position, I contributed to the development of a machine
+                learning (ML) enhanced application that: scraped and provided
+                recommendations for Common Vulnerabilities and Exposures (CVE)
+                patches, offered remediation strategies to the management, and
+                enabled the auditing of devices in system critical electrical
+                infrastructure.
               </p>
               <p class="card-text ti-3">
-                In this role, I played a key part in translating design requirements
-                and implementing critical features of the application, including the
-                integration of ML algorithms to improve the accuracy and efficiency
-                of patch recommendation and remediation as well as ensuring
-                auditability to ensure compliance with federal guidelines.
-
-                This required working closely with other developers and researchers
-                to ensure that the ML algorithms were properly trained and optimized
-                for the specific needs of the electrical infrastructure environment.
-
-                Principally, any models or algorithms that were applied required
-                verifiability and explaination as to why specific courses of action
-                were reccommended.
+                I played a key part in translating design requirements and implementing
+                critical features of the application, including the integration of ML
+                algorithms to improve the accuracy and efficiency of patch
+                recommendation and remediation, as well as, ensuring auditability
+                to ensure compliance with federal guidelines. This required working
+                closely with other developers and researchers to ensure that the ML
+                algorithms were properly trained and optimized for the specific needs
+                of the electrical infrastructure environment. Principally, any models
+                or algorithms that were applied required verifiability and explanation
+                as to why specific courses of action were recommended.
               </p>
               <p class="card-text ti-3"></p>
                 Additionally, I collaborated with other team members to write code,
