added gpa to BS

--- a/index.html
+++ b/index.html
@@ -1132,6 +1132,9 @@
             </div>
             <div class="card-body">
               <h3 class="card-title">Bachelor of Science - BS, Computer Science</h3>
+              <p class="card-text mb-2">
+                <span class="badge bg-secondary">GPA</span> 3.0 GPA
+              </p>
               <p class="card-text">
                 <span class="badge bg-secondary">Activities and societies</span>
                 Association of Computer Machinery (ACM),
