added target attr to a tags + added link to rot13 site for email

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
             the application of a neural network to extract character and numerical
             values to determine statistics over the duration of a video.
           </p>
-          <a href="https://github.com/ramity/apexcv">
+          <a href="https://github.com/ramity/apexcv" target="_blank">
             <span class="badge rounded-pill text-bg-dark">Github</span>
           </a>
         </div>
@@ -727,7 +727,7 @@
             through building a series of OOP class definitions. After completion, students use some
             provided method logic and apply brute force to decrypt provided transaction data.
           </p>
-          <a href="https://catalog.uark.edu/undergraduatecatalog/coursesofinstruction/csce/">
+          <a href="https://catalog.uark.edu/undergraduatecatalog/coursesofinstruction/csce/" target="_blank">
             <span class="badge rounded-pill text-bg-dark">Course catalog</span>
           </a>
         </div>
@@ -1294,17 +1294,17 @@
       <div id="contact-container" class="row auto-fade p-5 mb-5">
         <p class="m-0 p-0">
           <span class="badge bg-secondary">Email</span>
-            yrjvfpyoebja@tznvy.pbz (rot13)
+            yrjvfpyoebja@tznvy.pbz (<a href="https://rot13.com/" target="_blank">rot13</a>)
           <br>
           <br>
           <span class="badge bg-secondary">LinkedIn</span>
-          <a href="https://www.linkedin.com/in/ramity/">
+          <a href="https://www.linkedin.com/in/ramity/" target="_blank">
             linkedin.com/in/ramity
           </a>
           <br>
           <br>
           <span class="badge bg-secondary">Github</span>
-          <a href="https://github.com/ramity">
+          <a href="https://github.com/ramity" target="_blank">
             github.com/ramity
           </a>
         </p>
