updated intro paragraph

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             and 3 years of academic research, I bring a wealth of expertise to every
             project I undertake.
 
-            I specialize in designing and developing scalable software solutions for a
-            variety of applications, from e-commerce platforms to machine learning
-            enhanced tools. Whether working independently or as part of a team, I am
-            committed to delivering results that exceed expectations.
+            My career in software has been composed of commercial, freelance, academic,
+            and research positions with my work seeing use in the aviation, automotive,
+            construction, electric power, food, transportation, and retail industries.
+            I'm a published scholar with two produced works with my thesis presenting
+            a new form of distributed machine learning.
 
-            My unique value proposition lies in my ability to quickly translate
-            complex requirements, identify scope and potential challenges, and implement
-            solutions that are both efficient and effective. With a proven track record of success
-            across multiple domains, I am excited to bring my problem-solving skills
-            and drive to your organization.
+            My unique value proposition lies in my deep foundations in web and research
+            level understanding of AI fusing to create highly accessible and interactive
+            machine learning powered applications. I am confident that I have the
+            horizontal knowledge and skills to make a valuable contribution to your team.
           </p>
         </div>
       </div>
