--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </p>
           <p class="m-0 ti-3">
             If you're looking for a talented and driven engineer to help take your
-            projects to the next level or believe you have challenging problem to solve,
+            projects to the next level or believe you have a challenging problem to solve,
             I'd love to hear from you. Please feel free to get in touch to learn
             more about my experience and skills.
           </p>
