Added lane detection implementation to created works

--- a/index.html
+++ b/index.html
@@ -540,6 +540,21 @@
           </p>
         </div>
 
+        <h2 class="display-6">Lane detection experiment</h2>
+        <video class="embed-responsive-item mb-0 p-0" controls autoplay muted loop>
+          <source src="resources/video/lane_detection.mp4" type="video/mp4">
+        </video>
+        <div class="description">
+          <p>
+            A classical CV lane detection solution I created. This approach uses the
+            a fusion of many openCV operations with the knowledge that lanes point
+            towards a calculatable vanishing point with similar slope magnitudes.
+            The extracted information is used to calculate lane position, provide
+            a correction value for steering, and detect lane departure.
+          </p>
+        </div>
+
+
         <h2 class="display-6">CTTP Calibration Application</h2>
         <div id="cttp-calibration" class="carousel carousel-dark slide">
           <div class="carousel-indicators mb-0">
