added lane-detection github link

--- a/index.html
+++ b/index.html
@@ -552,6 +552,9 @@
             The extracted information is used to calculate lane position, provide
             a correction value for steering, and detect lane departure.
           </p>
+          <a href="https://github.com/ramity/lane-detection" target="_blank">
+            <span class="badge rounded-pill text-bg-dark">Github</span>
+          </a>
         </div>
 
 
